# Re3D

./: .gitignore  CMakeLists.txt  CNAME  README.md
.github/workflows/: cmake-multi-platform.yml  msvc.yml
engine/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  camera.cpp  camera.h  components.cpp  components.h  delegates.cpp  delegates.h  engine.cpp  engine.h  fbx_loader.cpp  fbx_loader.h  fbxsdk.cmake  game_scene.cpp  game_scene.h  graphics_common.h  logger.cpp  logger.h  obj_model_loader.cpp  obj_model_loader.h  pch.h  stb_texture_loader.cpp  stb_texture_loader.h  utility.h  window.cpp  window.h
game/: CMakeLists.txt  game.cpp  pch.h  triangle.cpp  window.cpp  window.h
game_dxr/: CMakeLists.txt  game_dxr.cpp  pch.h
renderer/: CMakeLists.txt  base_renderer.cpp  base_renderer.h  color.h  d3dx12.h  device_manager.cpp  device_manager.h  gpu_resource.cpp  gpu_resource.h  gui.cpp  gui.h  light_cull_pass.cpp  light_cull_pass.h  mesh_shader_pass.cpp  mesh_shader_pass.h  pch.h  render_pass.cpp  render_pass.h  render_utils.cpp  render_utils.h  renderer.cpp  renderer.h  renderer_common.h  renderer_context.cpp  renderer_context.h  renderer_dxr.cpp  renderer_dxr.h  skybox.cpp  skybox.h
renderer/imgui/: imgui_impl_win32.h
renderer/shaders/: AmplifyShader.hlsl  ForwardPS.hlsl  ForwardVS.hlsl  LightCull.hlsl  MeshShader.hlsl  ShadowMap.hlsl  SimplePS.hlsl  SkyboxPS.hlsl  SkyboxVS.hlsl  shader_common.hlsli
